Sat Jun 20 03:34:16 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: added rdoc.

Fri Jun 19 23:43:38 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: edited rdoc.

Fri Jun 19 22:58:16 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c; edited rdoc.

Fri Jun 19 22:21:17 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: edited rdoc.

Fri Jun 19 21:56:01 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_expt): delegates to complex when self is
	  negative.  bacause Float#** does not produce complex.

Fri Jun 19 21:40:58 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c: edited rdoc.

	* rational.c: ditto.

Fri Jun 19 20:53:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* encoding.c (rb_enc_name_list): update RDoc.  [ruby-core:23926]

Fri Jun 19 20:44:45 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: constant COMPLEX_NAME has been removed.

	* rational.c: constant RATIONAL_NAME has been removed.

Fri Jun 19 20:39:46 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: added rdoc.  a patch from Run Paint Run Run.

Fri Jun 19 17:04:59 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_cmp): should always return nil for NaN.

	* numeric.c (flo_cmp): handle infinite value specially using
	  infinite? method internally.  [ruby-dev:38681]

Fri Jun 19 09:28:45 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (*_numerator,*_denominator): moved to rational.c.

	* rational.c (*_numerator,*_denominator): moved from numeric.c.

Fri Jun 19 08:14:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (big_lshift, big_rshift): return Bignum always withou
	  normalization.  [ruby-dev:38679]

Thu Jun 18 22:31:38 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_s_convert): calls to_r when the given argument
	  is non-integer.

	* rational.c (nurat_s_convert): raises TypeError when the given
	  argument is nil.

	* complex.c (nucomp_s_convert): ditto.
